# fileman

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: main.py
src/ui/: tui.py
